# coppy-demo

./: .copier-answers-py.yaml  .coveragerc  .pre-commit-config.yaml  hatch.toml  mise.toml  noxfile.py  pyproject.toml  readme.md  ruff.toml
src/coppydemo_tests/: test_cli.py
tasks/: bump
